# aviation_model

./: .pre-commit-config.yaml  README.md  aviation.py  find_aircraft_per_day.py  find_passengers_per_day.py  mkdocs.yml  pyproject.toml
.github/workflows/: check.yml
analysis/: find_aircraft_per_day.py  find_passengers_per_day.py
docs/: aviation.md  index.md
docs/javascripts/: mathjax.js
src/aviation/: __init__.py  _engine.py  _model.py  aviation.py  units.py
tests/: test_aviation.py  test_engine.py
