[project]
name = "aviation"
version = "0.1.0"
description = "A simple model of the global aviation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
 "pytest>=8.4.1",
 "ruff>=0.12.3",
]
docs = ["mkdocs-bibtex>=4.4.0", "mkdocs-material>=9.6.15"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
